force-app/main/default/objects/Forum_Info__c/Forum_Info__c.object-meta.xml
<CustomObject>
    <label>Forum Info</label>
    <nameField>
        <displayFormat>FN-{00000}</displayFormat>
        <label>Forum Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forum Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>