force-app/main/default/objects/Forum_Info__c/fields/All_Likes__c.field-meta.xml
<CustomField>
    <fullName>All_Likes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>All Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>