force-app/main/default/objects/Forum_Info__c/fields/Feed_Creator__c.field-meta.xml
<CustomField>
    <fullName>Feed_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feed Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forum_Info</relationshipName>
    <type>Lookup</type>
</CustomField>