force-app/main/default/objects/Forum_Info__c/fields/Likes_Recieved_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Likes_Recieved_6_Months__c</fullName>
    <label>Likes Recieved 6 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>