force-app/main/default/objects/Forum_Info__c/fields/Likes_Recieved_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Likes_Recieved_7_Days__c</fullName>
    <label>Likes Recieved 7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>