force-app/main/default/objects/Forum_Info__c/fields/Likes_Recieved_in_24__c.field-meta.xml
<CustomField>
    <fullName>Likes_Recieved_in_24__c</fullName>
    <label>Likes Recieved in 24</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>