force-app/main/default/objects/Forum_Info__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Forum_Info__c</referenceTo>
    <relationshipLabel>Forum Info</relationshipLabel>
    <relationshipName>Forum_Info</relationshipName>
    <type>Lookup</type>
</CustomField>